# secret-santa-ai

./: .gitignore  app.py  models.py  pyproject.toml
instance/: santa.db
src/: models.py
static/: replit.css  script.js  style.css
templates/: base.html  create_event.html  dashboard.html  edit_event.html  event_dashboard.html  index.html  invite_participants.html  login.html  register.html  view_wishlist.html  wishlist.html
