[project]
name = "gift-exchange-guide"
authors = [
    {name = "Michal Mikolajczyk", email = "mikolajczyk01@gmail.com"}
]
version = "0.1.0"
description = "Simple app which helps perform drawing names for secret gift exchange"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-login>=0.6.3",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.38",
    "werkzeug>=3.1.3",
    "flask-wtf>=1.2.2",
]
license = { file = "LICENSE" }
keywords = ["secret-santa", "gift", "draw"]